objects/Tax_Code_Associations__c.object
<CustomObject>
    <description>Allows associating tax codes with activity types from work orders. For each activity type, one and only one tax code should be set. This value is passed via integration to Avatax for calculation of sales tax.</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Activity type associated to work details. Must be unique</description>
        <inlineHelpText>Add or modify activity type</inlineHelpText>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Overtime Travel</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - Equipment</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Standard Travel</fullName>
                </value>
                <value>
                    <fullName>Sublbr - New Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A short description for the record</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Excluded_Activity_Types__c</fullName>
        <description>The activity lines that are not included in the w/o</description>
        <label>Excluded Activity Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Sublbr - New Construction</fullName>
                </value>
                <value>
                    <fullName>Sublbr - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excluded_Line_Types__c</fullName>
        <description>The line types that are NOT included (excluded) in the work order for the exception to match</description>
        <label>Excluded Line Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Included_Activity_Types__c</fullName>
        <description>Activity types for the exception record</description>
        <label>Included Activity Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Sublbr - New Construction</fullName>
                </value>
                <value>
                    <fullName>Sublbr - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Vendor Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Vendor Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Vendor Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Vendor Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Vendor Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Vendor Overtime Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Included_Line_Types__c</fullName>
        <description>The line types that are included in the work order to match the exception rule</description>
        <label>Included Line Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Denotes the line type that the rule applies to. Doesn&apos;t need to be specified for the rule to work</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
                <value>
                    <fullName>Labor - Installation</fullName>
                </value>
                <value>
                    <fullName>Labor - Service</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Stock Receipt (Restocking)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation used to determine if a work order matches the exception</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Includes</fullName>
                </value>
                <value>
                    <fullName>Not Includes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Denotes the order type that the rule applies to. Doesn&apos;t need to be specified for the rule to work</description>
        <label>Order Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service-DDM</fullName>
                </value>
                <value>
                    <fullName>Service-NMS</fullName>
                </value>
                <value>
                    <fullName>Service-PM</fullName>
                </value>
                <value>
                    <fullName>Service-AED</fullName>
                </value>
                <value>
                    <fullName>Service-GLASS</fullName>
                </value>
                <value>
                    <fullName>Service-MHE</fullName>
                </value>
                <value>
                    <fullName>Parts Orders</fullName>
                </value>
                <value>
                    <fullName>Leasing/Rental</fullName>
                </value>
                <value>
                    <fullName>Sales-EQUIP</fullName>
                </value>
                <value>
                    <fullName>Fleet Maintenance (TFS)</fullName>
                </value>
                <value>
                    <fullName>Service-RES</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Denotes that the rule is segment specific to support multiple tax codes per activity type based on segments (Service Teams)</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Valley</fullName>
                </value>
                <value>
                    <fullName>El Paso</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>New Orleans</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Tallahassee</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Avondale</fullName>
                </value>
                <value>
                    <fullName>Mesa</fullName>
                </value>
                <value>
                    <fullName>Tucson</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Miner-Equipment</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <description>The tax code associated to the activity type</description>
        <inlineHelpText>Enter the tax code associated with this activity type</inlineHelpText>
        <label>Tax Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Tax Code Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type__c</columns>
        <columns>Tax_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Line_Type__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Segment__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Exceptions</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Segment__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Included_Line_Types__c</columns>
        <columns>Included_Activity_Types__c</columns>
        <columns>Excluded_Line_Types__c</columns>
        <columns>Excluded_Activity_Types__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tax_Code_Associations__c.Exception</value>
        </filters>
        <label>Exceptions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Standard</fullName>
        <columns>NAME</columns>
        <columns>Segment__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Tax_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tax_Code_Associations__c.Standard</value>
        </filters>
        <label>Standard</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Tax Code Associations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Code Associations</pluralLabel>
    <recordTypes>
        <fullName>Exception</fullName>
        <active>true</active>
        <description>Exceptions to Tax Code Association</description>
        <label>Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Tax Code Association</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>